samples/_failures_safe/1760886874_8f2b03_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f27b7d5e.c: In function ‘main’:
./samples/SAFE/__tmp_f27b7d5e.c:152:16: error: expected ‘)’ at end of input
  152 |     add_edge(&g
      |             ~  ^
      |                )
./samples/SAFE/__tmp_f27b7d5e.c:152:5: error: too few arguments to function ‘add_edge’
  152 |     add_edge(&g
      |     ^~~~~~~~
./samples/SAFE/__tmp_f27b7d5e.c:29:6: note: declared here
   29 | void add_edge(Graph *g, int from, int to, int weight) {
      |      ^~~~~~~~
./samples/SAFE/__tmp_f27b7d5e.c:152:5: error: expected declaration or statement at end of input
  152 |     add_edge(&g
      |     ^~~~~~~~
